--- a/res/layout/main.xml
+++ b/res/layout/main.xml
@@ -1,12 +1,16 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    android:orientation="vertical"
-    android:layout_width="fill_parent"
-    android:layout_height="fill_parent"
-    >
-<TextView  
-    android:layout_width="fill_parent" 
-    android:layout_height="wrap_content" 
-    android:text="@string/hello"
-    />
-</LinearLayout>
+<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+	android:orientation="vertical" android:layout_width="fill_parent"
+	android:layout_height="fill_parent" android:weightSum="1">
+	<TextView android:layout_width="fill_parent"
+		android:layout_height="wrap_content" android:text="@string/intro"
+		android:gravity="center" android:layout_above="@+id/imageView1" />
+	<ImageView android:layout_height="wrap_content"
+		android:layout_width="match_parent" android:src="@drawable/intelligrape"
+		android:layout_gravity="center_vertical" android:id="@id/imageView1"
+		android:layout_centerVertical="true"></ImageView>
+	<Button android:text="@string/Enter" android:layout_height="wrap_content"
+		android:id="@+id/button1" android:layout_below="@id/imageView1"
+		android:layout_centerHorizontal="true" android:layout_marginTop="30dp"
+		android:onClick="enterButtonClicked" android:layout_width="130dp"></Button>
+</RelativeLayout>
