--- a/res/layout/contactus.xml
+++ b/res/layout/contactus.xml
@@ -3,19 +3,29 @@
     android:id="@android:id/tabhost"
     android:layout_width="fill_parent"
     android:layout_height="fill_parent">
-    <LinearLayout
+    
+    
+     <LinearLayout
         android:orientation="vertical"
         android:layout_width="fill_parent"
         android:layout_height="fill_parent"
         android:padding="5dp">
-        <TabWidget
-            android:id="@android:id/tabs"
-            android:layout_width="fill_parent"
-            android:layout_height="wrap_content" />
+
         <FrameLayout
             android:id="@android:id/tabcontent"
             android:layout_width="fill_parent"
-            android:layout_height="fill_parent"
-            android:padding="5dp" />
+            android:layout_height="wrap_content"
+            android:padding="5dp"
+            android:layout_weight="1"/>
+
+        <TabWidget
+            android:id="@android:id/tabs"
+            android:layout_width="fill_parent"
+            android:layout_height="wrap_content"
+            android:layout_weight="0"/>
+            
+            
+    
+      
     </LinearLayout>
 </TabHost>
