added mail functionality through intent

--- a/res/layout/query.xml
+++ b/res/layout/query.xml
@@ -1,14 +1,32 @@
 <?xml version="1.0" encoding="utf-8"?>
-<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
-	android:orientation="vertical" android:layout_width="fill_parent"
-	android:layout_height="fill_parent" android:weightSum="1">
-    <EditText android:id="@+id/editText2" android:inputType="textEmailAddress" android:layout_width="match_parent" android:layout_height="wrap_content" android:layout_below="@+id/editText1" android:layout_alignParentLeft="true" android:layout_marginTop="19dp" android:text="@string/Email"></EditText>
-    <EditText android:id="@+id/editText3" android:layout_height="wrap_content" android:layout_below="@+id/editText2" android:layout_alignParentLeft="true" android:layout_marginTop="24dp" android:layout_width="match_parent" android:text="@string/Subject">
-        <requestFocus></requestFocus>
-    </EditText>
-    <EditText android:id="@+id/editText1" android:inputType="textPersonName" android:layout_width="match_parent" android:layout_height="wrap_content" android:layout_alignParentTop="true" android:layout_alignParentLeft="true" android:text="@string/Name"></EditText>
-    <Spinner android:id="@+id/spinner1" android:layout_width="match_parent" android:layout_height="wrap_content" android:layout_below="@+id/editText3" android:layout_alignParentLeft="true" android:layout_marginTop="17dp"></Spinner>
-    <EditText android:id="@+id/editText4" android:inputType="textMultiLine" android:layout_width="match_parent" android:layout_height="wrap_content" android:layout_below="@+id/spinner1" android:layout_alignParentLeft="true" android:layout_marginTop="16dp" android:text="@string/Comment"></EditText>
-    <Button android:id="@+id/button1" android:layout_height="wrap_content" android:layout_alignParentBottom="true" android:layout_alignParentLeft="true" android:layout_width="match_parent" android:text="@string/send_message"></Button>
+<ScrollView android:id="@+id/scrollView1"
+	android:layout_width="fill_parent" android:layout_height="fill_parent"
+	xmlns:android="http://schemas.android.com/apk/res/android">
+	<LinearLayout android:id="@+id/linearLayout1"
+		android:layout_width="match_parent" android:orientation="vertical"
+		android:layout_height="match_parent">
 
-</RelativeLayout>
+		<EditText android:id="@+id/editText1" android:layout_width="match_parent"
+			android:layout_height="match_parent" android:inputType="textPersonName"
+			android:hint="@string/Name">
+			<requestFocus></requestFocus>
+		</EditText>
+		<EditText android:layout_width="match_parent" android:id="@+id/editText2"
+			android:inputType="textEmailAddress" android:layout_height="wrap_content"
+			android:hint="@string/Email"></EditText>
+		<EditText android:layout_width="match_parent" android:id="@+id/editText3"
+			android:layout_height="wrap_content" android:hint="@string/Subject"></EditText>
+			
+		<Spinner android:layout_width="match_parent" android:id="@+id/spinner1"
+			android:layout_height="wrap_content"></Spinner>
+			
+		<EditText android:layout_width="match_parent" android:id="@+id/editText4"
+			android:inputType="textMultiLine" android:layout_height="246dp"
+			android:hint="@string/Comment"></EditText>
+			
+		<Button android:layout_width="match_parent" android:text="Button"
+	android:layout_height="wrap_content" android:id="@+id/button1"
+	android:onClick="collectDataAndSendMail"></Button>
+
+	</LinearLayout>
+</ScrollView>
