--- a/res/layout/dashboard.xml
+++ b/res/layout/dashboard.xml
@@ -1,26 +1,110 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout
-  xmlns:android="http://schemas.android.com/apk/res/android"
-  android:orientation="vertical"
-  android:layout_width="match_parent"
-  android:layout_height="match_parent">
-    <TableLayout android:layout_height="wrap_content" android:id="@+id/tableLayout1" android:layout_width="match_parent">
-        <TableRow android:layout_height="wrap_content" android:layout_width="wrap_content" android:id="@+id/tableRow1" android:layout_margin="10dp">        
-                <ImageButton android:src="@drawable/phone" android:layout_width="80dp" android:id="@+id/imageButton1" android:layout_height="80dp" android:layout_gravity="center|center_vertical"></ImageButton>            
-            <TextView android:layout_height="wrap_content" android:id="@+id/textView1" android:layout_width="wrap_content" android:textAppearance="?android:attr/textAppearanceLarge" android:padding="25dp" android:text="@string/our_technology"></TextView>
-        </TableRow>
-        <TableRow android:layout_height="wrap_content" android:layout_width="wrap_content" android:id="@+id/tableRow1" android:layout_margin="10dp">        
-                <ImageButton android:src="@drawable/phone" android:layout_width="80dp" android:id="@+id/imageButton1" android:layout_height="80dp" android:layout_gravity="center|center_vertical"></ImageButton>            
-            <TextView android:layout_height="wrap_content" android:id="@+id/textView1" android:layout_width="wrap_content" android:textAppearance="?android:attr/textAppearanceLarge" android:padding="25dp" android:text="@string/how_we_work"></TextView>
-        </TableRow>
-        <TableRow android:layout_height="wrap_content" android:layout_width="wrap_content" android:id="@+id/tableRow1" android:layout_margin="10dp">        
-                <ImageButton android:src="@drawable/phone" android:layout_width="80dp" android:id="@+id/imageButton1" android:layout_height="80dp" android:layout_gravity="center|center_vertical"></ImageButton>            
-            <TextView android:layout_height="wrap_content" android:id="@+id/textView1" android:layout_width="wrap_content" android:textAppearance="?android:attr/textAppearanceLarge" android:padding="25dp" android:text="@string/about_us"></TextView>
-        </TableRow>
-        <TableRow android:layout_height="wrap_content" android:layout_width="wrap_content" android:id="@+id/tableRow1" android:layout_margin="10dp" android:onClick="contactUsClicked">        
-                <ImageButton android:src="@drawable/phone" android:layout_width="80dp" android:id="@+id/imageButton1" android:layout_height="80dp" android:layout_gravity="center|center_vertical" android:clickable="true"></ImageButton>            
-            <TextView android:layout_height="wrap_content" android:id="@+id/textView1" android:layout_width="wrap_content" android:textAppearance="?android:attr/textAppearanceLarge" android:text="@string/contactus" android:padding="25dp"></TextView>
-        </TableRow>        
-    </TableLayout>
-    
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+	android:orientation="vertical" android:layout_width="match_parent"
+	android:layout_height="match_parent" android:background="@drawable/app_back">
+	<TableLayout android:layout_height="match_parent"
+		android:layout_width="match_parent" android:id="@+id/tableLayout1">
+		<TableRow android:layout_height="wrap_content"
+			android:padding="20dp" android:id="@+id/tableRow1"
+			android:layout_width="wrap_content" android:onClick="ourTechnologyClicked">
+
+			<ImageView android:src="@drawable/technology" android:id="@+id/imageButton1"
+				style="@style/dashboard_imageView"></ImageView>
+
+			<TextView android:text="@string/our_technology" style="@style/dashboard_textView"
+				android:layout_width="wrap_content" android:id="@+id/textView1"
+				android:layout_height="wrap_content" android:gravity="center_vertical"></TextView>
+			<TextView />
+		</TableRow>
+
+
+
+
+
+		<TableRow android:padding="20dp" android:layout_height="wrap_content"
+			android:id="@+id/tableRow1" android:layout_width="wrap_content"
+			android:onClick="howWeWorkClicked">
+			<TextView />
+			<TextView android:text="@string/how_we_work" style="@style/dashboard_textView"
+				android:id="@+id/textView1" android:layout_height="wrap_content"
+				android:gravity="right"></TextView>
+			<ImageView android:src="@drawable/ic_tux" android:id="@+id/imageButton1"
+				style="@style/dashboard_imageView"></ImageView>
+		</TableRow>
+
+
+		<TableRow android:layout_margin="20dp" android:layout_height="wrap_content"
+			android:id="@+id/tableRow1" android:layout_width="wrap_content">
+			<ImageView android:src="@drawable/about_us"
+				android:id="@+id/imageButton1" style="@style/dashboard_imageView"></ImageView>
+			<TextView android:text="@string/about_us" style="@style/dashboard_textView"
+				android:layout_width="wrap_content" android:id="@+id/textView1"
+				android:layout_height="wrap_content"></TextView>
+		</TableRow>
+
+		<TableRow android:layout_margin="20dp" android:layout_height="wrap_content"
+			android:id="@+id/tableRow1" android:layout_width="wrap_content"
+			android:onClick="contactUsClicked">
+			<TextView />
+			<TextView android:text="@string/contactus" style="@style/dashboard_textView"
+				android:layout_width="wrap_content" android:id="@+id/textView1"
+				android:layout_height="wrap_content" android:gravity="right"></TextView>
+			<ImageView android:clickable="true" android:src="@drawable/ic_contactus"
+				android:id="@+id/imageButton1" style="@style/dashboard_imageView"></ImageView>
+		</TableRow>
+		<ImageView android:background="@color/white"
+			android:src="@drawable/logo_intelligrape_img" android:id="@+id/imageView1"
+			android:layout_width="match_parent" android:layout_height="match_parent"></ImageView>
+	</TableLayout>
+
+
+	<TableLayout android:id="@+id/tableLayout1"
+		android:layout_width="match_parent" android:layout_height="match_parent">
+
+		<TableRow android:layout_height="wrap_content"
+			android:layout_width="wrap_content" android:id="@+id/tableRow1"
+			android:padding="20dp" android:onClick="ourTechnologyClicked">
+			<ImageView android:src="@drawable/icon_arrow_rgt"
+				android:layout_gravity="center|center_vertical" android:id="@+id/imageButton1">
+			</ImageView>
+			<TextView style="@style/dashboard_textView"
+				android:layout_width="wrap_content" android:layout_height="wrap_content"
+				android:id="@+id/textView1" android:text="@string/our_technology"></TextView>
+		</TableRow>
+
+		<TableRow android:layout_height="wrap_content"
+			android:padding="20dp" android:layout_width="wrap_content"
+			android:id="@+id/tableRow1" android:onClick="howWeWorkClicked">
+			<ImageView android:src="@drawable/icon_arrow_rgt"
+				android:id="@+id/imageButton1" android:layout_gravity="center|center_vertical"></ImageView>
+			<TextView android:layout_height="wrap_content" android:id="@+id/textView1"
+				style="@style/dashboard_textView" android:text="@string/how_we_work"></TextView>
+		</TableRow>
+
+		<TableRow android:layout_height="wrap_content"
+			android:layout_width="wrap_content" android:id="@+id/tableRow1"
+			android:layout_margin="20dp">
+			<ImageView android:src="@drawable/icon_arrow_rgt"
+				android:id="@+id/imageButton1" android:layout_gravity="center|center_vertical"></ImageView>
+			<TextView style="@style/dashboard_textView"
+				android:layout_height="wrap_content" android:id="@+id/textView1"
+				android:layout_width="wrap_content" android:text="@string/about_us"></TextView>
+		</TableRow>
+
+
+		<TableRow android:layout_height="wrap_content"
+			android:layout_width="wrap_content" android:id="@+id/tableRow1"
+			android:layout_margin="20dp" android:onClick="contactUsClicked">
+			<ImageView android:src="@drawable/icon_arrow_rgt"
+				android:id="@+id/imageButton1" android:layout_gravity="center|center_vertical"
+				android:clickable="true"></ImageView>
+			<TextView android:layout_height="wrap_content" android:id="@+id/textView1"
+				style="@style/dashboard_textView" android:layout_width="wrap_content"
+
+				android:text="@string/contactus"></TextView>
+		</TableRow>
+		<ImageView android:layout_height="wrap_content"
+			android:background="@color/white" android:src="@drawable/logo_intelligrape_img"
+			android:id="@+id/imageView1" android:layout_width="match_parent"></ImageView>
+	</TableLayout>
 </LinearLayout>
