--- a/res/layout/main.xml
+++ b/res/layout/main.xml
@@ -1,16 +1,31 @@
 <?xml version="1.0" encoding="utf-8"?>
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
 	android:orientation="vertical" android:layout_width="fill_parent"
-	android:layout_height="fill_parent" android:weightSum="1">
-	<TextView android:layout_width="fill_parent"
-		android:layout_height="wrap_content" android:text="@string/intro"
-		android:gravity="center" android:layout_above="@+id/imageView1" />
-	<ImageView android:layout_height="wrap_content"
-		android:layout_width="match_parent" android:src="@drawable/intelligrape"
-		android:layout_gravity="center_vertical" android:id="@id/imageView1"
-		android:layout_centerVertical="true"></ImageView>
-	<Button android:text="@string/Enter" android:layout_height="wrap_content"
-		android:id="@+id/button1" android:layout_below="@id/imageView1"
-		android:layout_centerHorizontal="true" android:layout_marginTop="30dp"
-		android:onClick="enterButtonClicked" android:layout_width="130dp"></Button>
+	android:layout_height="fill_parent" android:weightSum="1"
+	android:onClick="logoImageClicked"
+	android:background="@color/white">
+	<ImageView android:layout_width="match_parent"
+		android:layout_height="wrap_content" android:src="@drawable/logo_intelligrape_img"
+		android:id="@+id/imageView2" android:layout_alignParentTop="true"
+		android:layout_marginTop="132dp"></ImageView>		
+	<RelativeLayout android:layout_width="wrap_content"
+		android:layout_height="wrap_content" android:id="@+id/relativeLayout1"
+		android:padding="15dp" android:layout_alignParentTop="true"
+		android:layout_alignParentLeft="true">
+		<ImageView android:layout_width="150dp"
+			android:layout_height="wrap_content" android:layout_alignParentLeft="true"
+			 android:src="@drawable/logo_grails"
+			android:layout_alignParentBottom="true" android:id="@+id/imageView1"></ImageView>
+		<ImageView android:layout_width="wrap_content"
+			android:layout_height="wrap_content" android:layout_toRightOf="@+id/imageView1"
+			android:layout_alignParentRight="true" android:layout_alignTop="@+id/imageView1"
+			android:src="@drawable/logo_groovy" android:layout_alignParentBottom="true"
+			android:id="@+id/imageView3"></ImageView>
+		<TextView android:layout_alignLeft="@+id/imageView1"
+			android:typeface="serif" android:id="@+id/textView1" android:gravity="center"
+			android:layout_width="wrap_content" android:layout_height="wrap_content"
+			android:textColor="@color/black" android:textAppearance="?android:attr/textAppearanceLarge"
+			android:layout_above="@+id/imageView1" android:text="@string/whatwedo"></TextView>
+	</RelativeLayout>
+
 </RelativeLayout>
