--- a/res/layout/contact_info.xml
+++ b/res/layout/contact_info.xml
@@ -1,80 +1,17 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
 	android:orientation="vertical" android:layout_width="match_parent"
-	android:layout_height="match_parent" android:weightSum="1">
+	android:layout_height="match_parent" android:weightSum="1"
+	android:background="@drawable/app_back">
+
 	<TextView android:layout_width="match_parent" android:text="@string/our_address"
-		android:id="@+id/textView1" android:textAppearance="?android:attr/textAppearanceLarge"
+		android:id="@+id/textView1" style="@style/how_we_work_text_view"
 		android:layout_height="wrap_content"></TextView>
-	<TableLayout android:layout_width="match_parent"
-		android:id="@+id/tableLayout1" android:layout_height="wrap_content">
-		<TableRow android:id="@+id/tableRow1" android:layout_width="wrap_content"
-			android:layout_height="wrap_content">
-			<TextView android:layout_height="wrap_content" android:id="@+id/textView3"
-				android:textAppearance="?android:attr/textAppearanceLarge"
-				android:layout_width="wrap_content" android:text="@string/fax"></TextView>
 
-			<TextView android:layout_height="wrap_content" android:id="@+id/textView2"
-				android:textAppearance="?android:attr/textAppearanceMedium"
-				android:padding="10dp" android:layout_width="match_parent"
-				android:text="@string/our_number_2"></TextView>
-		</TableRow>
-
-		<TableRow android:id="@+id/tableRow1" android:layout_width="wrap_content"
-			android:layout_height="wrap_content" android:onClick="phoneNumberTapped">
-			<ImageButton android:layout_height="wrap_content"
-				android:src="@android:drawable/stat_sys_phone_call" android:id="@+id/imageButton1"
-				android:layout_width="wrap_content"></ImageButton>
-			<TextView android:layout_height="wrap_content" android:id="@+id/textView2"
-				android:textAppearance="?android:attr/textAppearanceMedium"
-				android:padding="10dp" android:layout_width="match_parent"
-				android:text="@string/our_number_1" android:tag="@string/our_number_1">
-			</TextView>
-		</TableRow>
-
-		<TableRow android:id="@+id/tableRow1" android:layout_width="wrap_content"
-			android:layout_height="wrap_content" android:onClick="emailUsTapped">
-			<ImageButton android:src="@android:drawable/sym_action_email"
-				android:id="@+id/imageButton2" android:layout_height="wrap_content"
-				android:layout_width="wrap_content"></ImageButton>
-
-			<TextView android:layout_height="wrap_content" android:id="@+id/textView2"
-				android:textAppearance="?android:attr/textAppearanceMedium"
-				android:padding="10dp" android:layout_width="match_parent"
-				android:text="@string/emailUs">
-			</TextView>
-		</TableRow>
-
-		<TableRow android:id="@+id/tableRow3" android:layout_width="wrap_content"
-			android:layout_height="wrap_content">
-			<ImageButton android:src="@android:drawable/ic_dialog_map"
-				android:id="@+id/imageButton3" android:layout_height="wrap_content"
-				android:layout_width="wrap_content"></ImageButton>
-
-			<TextView android:layout_height="wrap_content" android:id="@+id/textView3"
-				android:textAppearance="?android:attr/textAppearanceMedium"
-				android:padding="10dp" android:layout_width="match_parent"
-				android:text="@string/locateUs">
-			</TextView>
-		</TableRow>
-
-
-		<TableRow android:id="@+id/tableRow4" android:layout_width="wrap_content"
-			android:layout_height="wrap_content">
-			<ImageButton android:src="@android:drawable/ic_dialog_map"
-				android:id="@+id/imageButton4" android:layout_height="wrap_content"
-				android:layout_width="wrap_content"></ImageButton>
-
-			<TextView android:layout_height="wrap_content" android:id="@+id/textView4"
-				android:textAppearance="?android:attr/textAppearanceMedium"
-				android:padding="10dp" android:layout_width="match_parent"
-				android:text="@string/find_us_on_web">
-			</TextView>
-		</TableRow>
-	</TableLayout>
-	<ImageView android:onClick="backButtonClicked"
-	android:layout_height="42dp" android:layout_marginTop="100dp"
-	android:layout_width="match_parent" android:src="@drawable/ic_menu_home"
-	android:id="@+id/imageView1"></ImageView>
-
-
-</LinearLayout>
+	<include layout="@layout/contact_info_table_layout" android:id="@+id/tableLayout1_ref"
+		android:layout_width="match_parent" android:layout_height="wrap_content" android:layout_below="@id/textView1"/>
+	
+	<ImageButton android:onClick="backButtonClicked"
+		android:src="@drawable/ic_menu_home" android:layout_height="64dp"
+		android:layout_width="match_parent" android:id="@+id/imageButton1" android:layout_alignParentBottom="true"></ImageButton>
+</RelativeLayout>
