--- a/res/layout/flipper_linearlayout2.xml
+++ b/res/layout/flipper_linearlayout2.xml
@@ -6,8 +6,7 @@
 
 	<ScrollView android:id="@+id/scrollView"
 		android:layout_width="match_parent" android:layout_height="300dp">
-		<TextView android:textAppearance="?android:attr/textAppearanceMedium"
-			android:text="@string/agile_theory_2" android:textColor="@color/black"
+		<TextView style="@style/how_we_work_text_view" android:text="@string/agile_theory_2"
 			android:id="@+id/agile_theory" android:layout_height="wrap_content"
 			android:layout_width="match_parent"></TextView>
 	</ScrollView>
