--- a/res/layout/how_we_work.xml
+++ b/res/layout/how_we_work.xml
@@ -1,15 +1,18 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
 	android:orientation="vertical" android:layout_width="fill_parent"
-	android:layout_height="fill_parent" android:background="@drawable/app_back" >
+	android:layout_height="fill_parent" android:background="@drawable/app_back">
 
 	<TextView style="@style/dashboard_textView" android:text="@string/agile"
 		android:layout_height="wrap_content" android:id="@+id/agile"
-		android:layout_width="match_parent"></TextView>
+		android:layout_alignParentTop="true" android:layout_width="match_parent"></TextView>
 
 	<ViewFlipper android:layout_width="match_parent"
-		android:outAnimation="@anim/slideout" android:inAnimation="@anim/slidein"
-		android:autoStart="true" android:flipInterval="5000" android:id="@+id/viewFlipper1" android:layout_height="400dp">
+		android:layout_above="@+id/how_we_work_relative_layout"
+		android:layout_below="@id/agile" android:outAnimation="@anim/slideout"
+		android:inAnimation="@anim/slidein" android:autoStart="true"
+		android:flipInterval="5000" android:id="@+id/viewFlipper1"
+		android:layout_height="400dp">
 		<include layout="@layout/flipper_linearlayout1" android:id="@+id/linearLayout1_ref"
 			android:layout_width="match_parent" android:layout_height="266dp" />
 		<include layout="@layout/flipper_linearlayout2" android:id="@+id/linearLayout1_ref"
@@ -17,8 +20,10 @@
 		<include layout="@layout/flipper_linearlayout3" android:id="@+id/linearLayout1_ref"
 			android:layout_width="match_parent" android:layout_height="match_parent" />
 	</ViewFlipper>
-	<RelativeLayout android:layout_height="wrap_content"
-		android:layout_width="wrap_content">
+
+	<RelativeLayout 
+		android:layout_height="50dp" android:layout_alignParentBottom="true"
+		android:layout_width="wrap_content" android:id="@id/how_we_work_relative_layout">
 
 		<ImageButton android:layout_height="wrap_content"
 			android:layout_width="100dp" android:src="@android:drawable/ic_media_pause"
@@ -26,17 +31,19 @@
 			android:onClick="pauseButtonClicked" android:layout_alignParentRight="true"
 			android:layout_alignParentTop="true"></ImageButton>
 
-		<ImageButton android:layout_height="wrap_content" android:src="@drawable/ic_menu_home"
-			android:id="@+id/home" android:layout_width="100dp"
-			android:layout_alignParentLeft="true" android:layout_alignParentBottom="true"
-			android:layout_alignParentTop="true" android:onClick="homeButtonClicked" android:layout_toLeftOf="@+id/play" android:cropToPadding="true"></ImageButton>
+		<ImageButton android:layout_height="wrap_content"
+			android:src="@drawable/ic_menu_home" android:id="@+id/home"
+			android:layout_width="100dp" android:layout_alignParentLeft="true"
+			android:layout_alignParentBottom="true"
+			android:layout_alignParentTop="true" android:onClick="homeButtonClicked"
+			android:layout_toLeftOf="@+id/play" android:cropToPadding="true"></ImageButton>
 
 		<ImageButton android:layout_height="wrap_content"
 			android:src="@android:drawable/ic_media_play" android:id="@+id/play"
 			android:layout_width="wrap_content" android:layout_alignParentBottom="true"
 			android:layout_toLeftOf="@+id/pause" android:onClick="playButtonClicked"
 			android:layout_alignParentTop="true"></ImageButton>
-		
+
 	</RelativeLayout>
 
-</LinearLayout>
+</RelativeLayout>
