--- a/res/layout/our_technology.xml
+++ b/res/layout/our_technology.xml
@@ -1,50 +1,61 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
 	android:orientation="vertical" android:layout_width="match_parent"
 	android:layout_height="match_parent" android:weightSum="1"
 	android:background="@drawable/app_back">
-	<TextView android:layout_width="match_parent"
+	<TextView android:layout_width="match_parent" android:layout_alignParentTop="true"
 		android:textColor="@color/black" android:text="@string/our_technology_exp"
 		android:textAppearance="?android:attr/textAppearanceSmall"
 		android:gravity="center" android:id="@+id/textView1"
 		android:layout_gravity="center_horizontal" android:typeface="serif"
-		android:layout_height="214dp"></TextView>
+		android:layout_above="@+id/relativeLayoutOurTech"
+		android:layout_height="wrap_content"></TextView>
 
-	<RelativeLayout android:id="@+id/relativeLayoutOurTech"
+	<RelativeLayout android:id="@id/relativeLayoutOurTech"	android:layout_above="@+id/textSwitcher1"	
 		android:layout_width="wrap_content" android:layout_height="wrap_content">
 		<ImageView android:id="@+id/imageView1" android:src="@drawable/logo_grails"
-			android:layout_height="wrap_content" android:layout_width="wrap_content"
-			android:layout_toRightOf="@id/imageView2" android:onClick="grailsImageClicked"></ImageView>
-		<ImageView android:layout_width="155dp" android:id="@+id/imageView2"
-			android:src="@drawable/logo_groovy" android:layout_alignParentTop="true"
-			android:layout_alignParentLeft="true" android:layout_height="50dp"
+			android:layout_height="wrap_content" android:layout_width="wrap_content"			
+			android:layout_alignParentLeft="true" android:onClick="grailsImageClicked"></ImageView>
+			
+		<ImageView android:layout_width="155dp" android:id="@+id/imageView2"		
+		android:layout_toRightOf="@id/imageView1" 
+			android:src="@drawable/logo_groovy" 
+			android:layout_alignParentRight="true" android:layout_height="50dp"
 			android:onClick="groovyImageClicked"></ImageView>
 	</RelativeLayout>
 
 
-	<TextSwitcher android:id="@+id/textSwitcher1"
-		android:layout_width="match_parent" android:layout_height="128dp" android:layout_weight="0.91">
-       
+	<TextSwitcher android:id="@id/textSwitcher1" android:layout_above="@+id/relativeLayoutOurTech2"
+		android:layout_width="match_parent" android:layout_height="100dp"
+		android:layout_weight="0.91">
 	</TextSwitcher>
 
 
-	<LinearLayout android:id="@+id/relativeLayoutOurTech2"
+	<RelativeLayout android:id="@id/relativeLayoutOurTech2"  android:layout_alignParentBottom="true"
 		android:layout_height="wrap_content" android:layout_width="wrap_content">
-		
+
 		<ImageButton android:layout_width="60dp"
 			android:layout_height="48dp" android:src="@drawable/ic_menu_home"
-			android:id="@+id/imageButton1" android:onClick="homeButtonClicked"></ImageButton>
-		<Button android:layout_width="85dp" android:id="@+id/button2"
-			android:onClick="searchGoogleClicked" android:text="@string/search_google"
+			android:layout_alignParentLeft="true" android:id="@+id/imageButton1"						
+			android:onClick="homeButtonClicked"></ImageButton>
+			
+		<Button android:layout_width="wrap_content" android:id="@id/button2"
+			 android:onClick="searchGoogleClicked"
+			 android:layout_toRightOf="@id/imageButton1"
+			 android:layout_toLeftOf="@+id/prev_button"
+			android:text="@string/search_google" android:layout_height="wrap_content"></Button>
+		
+		<Button android:layout_width="wrap_content" android:id="@id/prev_button"
+			android:text="Prev" android:layout_toLeftOf="@+id/next_button"
+			android:layout_height="wrap_content" android:onClick="prevButtonClicked"></Button>
+			
+		<Button android:layout_width="wrap_content" android:id="@+id/next_button"
+			android:layout_alignParentRight="true" android:text="Next"
 			android:layout_height="wrap_content"></Button>
-			<Button android:layout_width="85dp" android:id="@+id/prev_button"
-			android:text="Prev" android:layout_height="wrap_content" android:onClick="prevButtonClicked"></Button>
-		<Button android:layout_width="85dp" android:id="@+id/next_button"
-			android:text="Next" android:layout_height="wrap_content"></Button>
-	</LinearLayout>
+	</RelativeLayout>
 
 
 
 
 
-</LinearLayout>
+</RelativeLayout>
