--- a/res/layout/aboutus_layout01.xml
+++ b/res/layout/aboutus_layout01.xml
@@ -1,10 +1,9 @@
 <?xml version="1.0" encoding="utf-8"?>
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
 	android:id="@+id/Layout01" android:layout_width="wrap_content"
-	android:layout_height="wrap_content">
-	<ImageView android:id="@+id/testimonial_img_01" android:src="@drawable/testimonial_jus"
-		android:layout_height="wrap_content" android:layout_width="match_parent"
-		android:layout_alignParentTop="true"></ImageView>
-
+	android:layout_height="match_parent">
+	
+	<TextView android:id="@+id/testimonial_img_01" android:text="@string/testimonial_justin"
+		style="@style/testimonial_full_config"></TextView>
 </RelativeLayout>
 
