--- a/res/layout/main.xml
+++ b/res/layout/main.xml
@@ -2,30 +2,43 @@
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
 	android:orientation="vertical" android:layout_width="fill_parent"
 	android:layout_height="fill_parent" android:weightSum="1"
-	android:onClick="logoImageClicked"
-	android:background="@color/white">
-	<ImageView android:layout_width="match_parent"
-		android:layout_height="wrap_content" android:src="@drawable/logo_intelligrape_img"
-		android:id="@+id/imageView2" android:layout_alignParentTop="true"
-		android:layout_marginTop="50dp"></ImageView>		
-	<RelativeLayout android:layout_width="wrap_content"
-		android:layout_height="wrap_content" android:id="@+id/relativeLayout1"
+	android:onClick="logoImageClicked" android:background="@color/white">
+
+	<ImageView android:id="@+id/imageView2" android:src="@drawable/logo_intelligrape_img"
+		android:layout_height="wrap_content" android:layout_width="match_parent"
+		android:layout_alignParentTop="true" android:layout_alignLeft="@+id/textView1"></ImageView>
+
+
+
+	<ProgressBar android:id="@+id/progressBar1"
+		android:layout_height="wrap_content" android:layout_width="wrap_content"
+		android:layout_above="@+id/loadingSign"
+		android:layout_centerHorizontal="true"></ProgressBar>
+
+	<TextView style="@style/textview_small_black" android:id="@+id/loadingSign"
+		android:layout_height="wrap_content" android:text="@string/loading_please_wait"
+		android:layout_centerVertical="true" android:layout_width="wrap_content"
+		android:layout_centerHorizontal="true"></TextView>
+
+	<RelativeLayout android:id="@+id/relativeLayout1"
+		android:layout_height="wrap_content" android:layout_width="wrap_content"
 		android:padding="15dp" android:layout_alignParentTop="true"
 		android:layout_alignParentLeft="true">
-		<ImageView android:layout_width="150dp"
-			android:layout_height="wrap_content" android:layout_alignParentLeft="true"
-			 android:src="@drawable/logo_grails"
-			android:layout_alignParentBottom="true" android:id="@+id/imageView1"></ImageView>
-		<ImageView android:layout_width="wrap_content"
-			android:layout_height="wrap_content" android:layout_toRightOf="@+id/imageView1"
-			android:layout_alignParentRight="true" android:layout_alignTop="@+id/imageView1"
-			android:src="@drawable/logo_groovy" android:layout_alignParentBottom="true"
-			android:id="@+id/imageView3"></ImageView>
-		<TextView android:layout_alignLeft="@+id/imageView1"
-			android:typeface="serif" android:id="@+id/textView1" android:gravity="center"
-			android:layout_width="wrap_content" android:layout_height="wrap_content"
-			android:textColor="@color/black" android:textAppearance="?android:attr/textAppearanceLarge"
-			android:layout_above="@+id/imageView1" android:text="@string/whatwedo"></TextView>
+		<TextView android:id="@+id/textView1" android:layout_above="@+id/imageView1"
+			android:typeface="serif" android:layout_height="wrap_content"
+			android:textAppearance="?android:attr/textAppearanceLarge"
+			android:text="@string/whatwedo" android:gravity="center"
+			android:layout_alignLeft="@+id/imageView1" android:textColor="@color/black" android:layout_width="match_parent"></TextView>
+
+		<ImageView android:layout_alignParentBottom="true"
+			android:layout_alignParentLeft="true" android:id="@+id/imageView1"
+			android:src="@drawable/logo_grails" android:layout_height="wrap_content"
+			android:layout_width="150dp"></ImageView>
+		<ImageView android:layout_alignParentBottom="true"
+			 android:layout_alignTop="@+id/imageView1"
+			android:id="@+id/imageView3"
+			android:src="@drawable/logo_groovy" android:layout_height="wrap_content"
+			android:layout_width="wrap_content" android:layout_alignParentRight="true"></ImageView>
 	</RelativeLayout>
 
 </RelativeLayout>
