--- a/res/values/styles.xml
+++ b/res/values/styles.xml
@@ -6,6 +6,7 @@
 		<item name="android:textColor">@color/black</item>
 		<item name="android:typeface">serif</item>
 		<item name="android:padding">5dp</item>
+		<item name="android:layout_gravity"> center_vertical</item>
 	</style>
 	<style name="dashboard_imageView">
 		<item name="android:layout_gravity"> center|center_vertical</item>
@@ -23,18 +24,40 @@
 		<item name="android:layout_width">wrap_content</item>
 		<item name="android:layout_height">wrap_content</item>
 	</style>
-	
+
 	<style name="contact_info_table_text_view" parent="android:Widget.TextView">
 		<item name="android:layout_width">wrap_content</item>
 		<item name="android:layout_height">match_parent</item>
 		<item name="android:padding">10dp</item>
 		<item name="android:textAppearance">?android:attr/textAppearanceMedium</item>
 		<item name="android:textColor">@color/black</item>
-		<item name="android:typeface">serif</item>		
-		
+		<item name="android:typeface">serif</item>
 	</style>
-	
-			
-	
+
+	<style name="dashboard_table_layout">
+		<item name="android:layout_margin">15dp</item>
+	</style>
+
+	<style name="our_blogs_list">
+		<item name="android:textColor">@color/black</item>
+		<item name="android:layout_width">60dp</item>
+		<item name="android:layout_height">80dp</item>
+	</style>
+
+	<style name="textview_small_black">
+		<item name="android:textColor">@color/black</item>
+		<item name="android:textAppearance">?android:attr/textAppearanceSmall</item>
+	</style>
+
+
+	<style name="testimonial_full_config">
+		<item name="android:layout_height">wrap_content</item>
+		<item name="android:layout_width">match_parent</item>
+		<item name="android:layout_alignParentLeft">true</item>
+		<item name="android:layout_alignParentRight">true</item>
+		<item name="android:layout_alignParentTop">true</item>
+		<item name="android:textColor">@color/black</item>
+	</style>
+
 
 </resources>
